proram description line-height + bugfix (don't dispay invisible programs)

--- a/web/css/custom/program.less
+++ b/web/css/custom/program.less
@@ -60,6 +60,7 @@ a {
 
   #description {
     margin: 25px auto;
+    line-height: 23px;
   }
 
   .btn-apk, #report-done {
